# trackdon

./: .env.example  .gitignore  Anchor.toml  DEPLOY.md  LICENSE  README.md  SECURITY.md  middleware.ts  next.config.mjs  package-lock.json  package.json  screenshots.mjs  tailwind.config.ts  tsconfig.json
app/: globals.css  layout.tsx  page.tsx
app/(auth)/: actions.ts
app/admin/: layout.tsx  page.tsx
app/cuenta/: actions.ts  forms.tsx  layout.tsx  page.tsx
app/dashboard/: layout.tsx  page.tsx
app/denunciar/: actions.ts  form.tsx  page.tsx
app/donar/: page.tsx
app/explorar/: page.tsx
app/privacidad/: page.tsx
app/publico/: page.tsx
app/registro-centro/: actions.ts  form.tsx  page.tsx
app/sobre/: page.tsx
app/terminos/: page.tsx
components/landing/: explorer-feed.tsx  patrocinadores-section.tsx  preview-section.tsx
components/site/: admin-sidebar.tsx  footer.tsx  header.tsx  language-switch.tsx  mobile-shell.tsx  theme-toggle.tsx  user-menu.tsx  user-sidebar.tsx
components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  label.tsx  stat.tsx  switch.tsx
docs/: ARCHITECTURE.md  DATA_MODEL.md
i18n/: request.ts
lib/: api-keys.ts  api-response.ts  auth.ts  centro.ts  crypto.ts  email.ts  mock.ts  otp.ts  username-policy.ts  utils.ts
lib/supabase/: client.ts  dashboard-queries.ts  eventos.ts  queries.ts  server.ts  storage.ts
messages/: en.json  es.json
programs/: README.md
programs/trackdon/: Cargo.toml
programs/trackdon/src/: lib.rs
supabase/: README.md  apply.py
supabase/auth-templates/: confirmation.html
tests/: smoke.mjs
(+112 files in other folders)
